test/fixtures/es-modules/tla/preload-main.snapshot
<project-root>/test/fixtures/es-modules/tla/execution.mjs:3

await Promise.resolve('hi');
^

Error [ERR_REQUIRE_ASYNC_MODULE]: require() cannot be used on an ESM graph with top-level await. Use import() instead.
Required module: <project-root>/test/fixtures/es-modules/tla/execution.mjs
Require stack:
- internal/preload
    at <node-internal-frames>
    at <node-internal-frames> {
  code: 'ERR_REQUIRE_ASYNC_MODULE'
}

Node.js <node-version>
